--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ Collaborated with psychiatrists and clinical psychologists.
                                             </div>
                                             <div class="col-xl-3">
                                                 <p><i class="fa fa-check me-2"></i>Peer-reviewed</p>
-                                                <p><a href="389822876_Sleeping_Patterns_and_Online_Gaming_Habits_Unravelling_Their_Influence_on_Anger_Tolerance_Among_University_Students" target="_blank"><i class="fa fa-check me-2"></i> Download</p>
+                                                <p><a href="https://shorturl.at/OhLkP" target="_blank"><i class="fa fa-check me-2"></i> Download</p>
                                                 <p class="mb-0"><i class="fa fa-check me-2"></i>Index: Doaj</p>
                                             </div>
                                         </div>
@@ -506,46 +506,6 @@ Differences based on Gender
                                     <div class="col-3 col-xl-2">
                                         <div class="view-img">
                                             <a href="img/Portfolio-1.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="Portfolio-1"><i class="fas fa-plus"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="portfolio-item py-5 border-bottom wow fadeInUp" data-wow-delay="0.3s">
-                                <div class="row g-4 align-items-center">
-                                    <div class="col-xl-6">
-                                        <h4 class="text-body">Review Article</h4>
-                                        <h1 class="display-6 mb-0">Common Mental Health disorder</h1>
-                                    </div>
-                                    <div class="col-9 col-xl-4">
-                                        <div class="portfolio-img">
-                                            <div class="portfolio-img-inner">
-                                                <img src="img/portfolio-2.jpg" class="img-fluid" alt="Image">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-3 col-xl-2">
-                                        <div class="view-img">
-                                            <a href="img/portfolio-2.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio-2"><i class="fas fa-plus"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="portfolio-item py-5 wow fadeInUp" data-wow-delay="0.5s">
-                                <div class="row g-4 align-items-center">
-                                    <div class="col-xl-6">
-                                        <h4 class="text-body">Review Paper</h4>
-                                        <h1 class="display-6 mb-0">Breakfast skipping</h1>
-                                    </div>
-                                    <div class="col-9 col-xl-4">
-                                        <div class="portfolio-img">
-                                            <div class="portfolio-img-inner">
-                                                <img src="img/portfolio-3.jpg" class="img-fluid" alt="Image">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-3 col-xl-2">
-                                        <div class="view-img">
-                                            <a href="img/portfolio-3.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio-3"><i class="fas fa-plus"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -692,25 +652,24 @@ Differences based on Gender
                     <div class="col-lg-9">
                         <div class="testimonial-content h-100 pt-6 ps-6 pb-6">
                             <div class="testimonial-carousel owl-carousel bg-light wow fadeInUp" data-wow-delay="0.1s">
-                                <div class="testimonial-item" data-dot="<img class='img-fluid' src='img/testimonial-img-1.jpg' alt=''>">
+                                <div class="testimonial-item" data-dot="<img class='img-fluid' src='img/golam%20hossain%20sir.jpg' alt=''>">
                                     <div class="row gy-4 gx-2 mb-4">
                                         <div class="col-sm-6">
                                             <div class="d-flex justify-content-sm-end">
                                                 <div class="testimonial-inner-img border border-primary border-3 me-4" style="width: 100px; height: 100px;">
-                                                    <img src="img/testimonial-img-1.jpg" class="img-fluid" style="object-fit: cover;" alt="">
+                                                    <img src="img/golam%20hossain%20sir.jpg" class="img-fluid" style="object-fit: cover;" alt="">
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
                                             <div>
                                                 <h5 class="mb-2">Professor dr. Golam Hossain</h5>
-                                                <p class="mb-0">Rajshahi, Bangladesh</p>
+                                                <p class="mb-0">Department of Statistics, University of Rajshahi, Bangladesh</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="text-sm-center">
-                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores nemo facilis tempora esse explicabo sed! Dignissimos quia ullam pariatur blanditiis sed voluptatum. Totam aut quidem laudantium tempora. Minima, saepe earum!
-                                        </p>
+                                        <p>Tafajjal Islam has been a valuable member of our health research group. His enthusiasm for public health research, attention to detail, and ability to work collaboratively have been outstanding. I am impressed by his commitment to making meaningful contributions to the field.
                                         <div class="d-flex justify-content-sm-center">
                                             <i class="fas fa-star text-primary"></i>
                                             <i class="fas fa-star text-primary"></i>
@@ -720,24 +679,24 @@ Differences based on Gender
                                         </div>
                                     </div>
                                 </div>
-                                <div class="testimonial-item" data-dot="<img class='img-fluid' src='img/testimonial-img-2.jpg' alt=''>">
+                                <div class="testimonial-item" data-dot="<img class='img-fluid' src='img/nur%20sir.jpg' alt=''>">
                                     <div class="row gy-4 gx-2 mb-4">
                                         <div class="col-sm-6">
                                             <div class="d-flex justify-content-sm-end">
                                                 <div class="testimonial-inner-img border border-primary border-3 me-4" style="width: 100px; height: 100px;">
-                                                    <img src="img/testimonial-img-2.jpg" class="img-fluid" style="object-fit: cover;" alt="">
+                                                    <img src="img/nur%20sir.jpg" class="img-fluid" style="object-fit: cover;" alt="">
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
                                             <div>
                                                 <h5 class="mb-2">Professor Dr. Nur-E-Alom Siddique</h5>
-                                                <p class="mb-0">Rajshahi, Bangladesh</p>
+                                                <p class="mb-0">Department of Psychology, University of Rajshahi, Bangladesh</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="text-sm-center">
-                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores nemo facilis tempora esse explicabo sed! Dignissimos quia ullam pariatur blanditiis sed voluptatum. Totam aut quidem laudantium tempora. Minima, saepe earum!
+                                        <p>It was a pleasure supervising Tafajjal Islam for his thesis titled 'The Mediating Effect of Mental Well-being and Resilience on the Association Between Drug Use and Suicidal Thoughts.' Tafajjal showed excellent dedication, strong analytical skills, and a sincere passion for research. I am confident he will achieve great success in his academic and research career.
                                         </p>
                                         <div class="d-flex justify-content-sm-center">
                                             <i class="fas fa-star text-primary"></i>
@@ -748,24 +707,24 @@ Differences based on Gender
                                         </div>
                                     </div>
                                 </div>
-                                <div class="testimonial-item" data-dot="<img class='img-fluid' src='img/testimonial-img-3.jpg' alt=''>">
+                                <div class="testimonial-item" data-dot="<img class='img-fluid' src='img/ahmed%20zubayer.jpg' alt=''>">
                                     <div class="row gy-4 gx-2 mb-4">
                                         <div class="col-sm-6">
                                             <div class="d-flex justify-content-sm-end">
                                                 <div class="testimonial-inner-img border border-primary border-3 me-4" style="width: 100px; height: 100px;">
-                                                    <img src="img/testimonial-img-3.jpg" class="img-fluid" style="object-fit: cover;" alt="">
+                                                    <img src="img/ahmed%20zubayer.jpg" class="img-fluid" style="object-fit: cover;" alt="">
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
                                             <div>
-                                                <h5 class="mb-2">Professor Dr. Yeamin Hossain</h5>
-                                                <p class="mb-0">Rajshahi, Bangladesh</p>
+                                                <h5 class="mb-2">Associate Professor Ahmed Zubayer</h5>
+                                                <p class="mb-0">BIGM, DHaka, Bangladesh</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="text-sm-center">
-                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores nemo facilis tempora esse explicabo sed! Dignissimos quia ullam pariatur blanditiis sed voluptatum. Totam aut quidem laudantium tempora. Minima, saepe earum!
+                                        <p>"I have had the privilege of mentoring Tafajjal Islam throughout his research journey. He consistently demonstrates hard work, intellectual curiosity, and a willingness to learn and grow. His progress as a young researcher is truly commendable, and I believe he has a bright future ahead."
                                         </p>
                                         <div class="d-flex justify-content-sm-center">
                                             <i class="fas fa-star text-primary"></i>
