--- a/index.html
+++ b/index.html
@@ -509,6 +509,46 @@ Differences based on Gender
                                         </div>
                                     </div>
                                 </div>
+                                                            <div class="portfolio-item py-5 border-bottom wow fadeInUp" data-wow-delay="0.3s">
+                                 <div class="row g-4 align-items-center">
+                                     <div class="col-xl-6">
+                                         <h4 class="text-body">Review Article</h4>
+                                         <h1 class="display-6 mb-0">Common Mental Health disorder</h1>
+                                     </div>
+                                     <div class="col-9 col-xl-4">
+                                         <div class="portfolio-img">
+                                             <div class="portfolio-img-inner">
+                                                 <img src="img/portfolio-2.jpg" class="img-fluid" alt="Image">
+                                             </div>
+                                         </div>
+                                     </div>
+                                     <div class="col-3 col-xl-2">
+                                         <div class="view-img">
+                                             <a href="img/portfolio-2.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio-2"><i class="fas fa-plus"></i></a>
+                                         </div>
+                                     </div>
+                                 </div>
+                             </div>
+                             <div class="portfolio-item py-5 wow fadeInUp" data-wow-delay="0.5s">
+                                 <div class="row g-4 align-items-center">
+                                     <div class="col-xl-6">
+                                         <h4 class="text-body">Review Paper</h4>
+                                         <h1 class="display-6 mb-0">Breakfast skipping</h1>
+                                     </div>
+                                     <div class="col-9 col-xl-4">
+                                         <div class="portfolio-img">
+                                             <div class="portfolio-img-inner">
+                                                 <img src="img/portfolio-3.jpg" class="img-fluid" alt="Image">
+                                             </div>
+                                         </div>
+                                     </div>
+                                     <div class="col-3 col-xl-2">
+                                         <div class="view-img">
+                                             <a href="img/portfolio-3.jpg" class="btn btn-primary btn-lg-square"  data-lightbox="portfolio-3"><i class="fas fa-plus"></i></a>
+                                         </div>
+                                     </div>
+                                 </div>
+                             </div>
                             </div>
                         </div>
                     </div>
