--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
                                     </p>
                                     
-                                    <a href="CV of Tafajjal Islam 6.4.pdf" class="btn btn-primary py-2 px-4"> <i class="fas fa-download me-2"></i>Download My CV</a>
+                                    <a href="CV%20of%20Tafajjal_Islam.pdf" class="btn btn-primary py-2 px-4"> <i class="fas fa-download me-2"></i>Download My CV</a>
                                 </div>
                             </div>
                         </div>
